--- a/ProjetoTempus/Areas/Customer/Views/Home/Index.cshtml
+++ b/ProjetoTempus/Areas/Customer/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
-﻿
-<h1>Lawn Service </h1>
+﻿@{
+    ViewData["Title"] = "Home";
+}
 
-    @*@foreach (var item in Model.CategoryList.OrderBy(o=>o.DisplayOrder))
+@*@foreach (var item in Model.CategoryList.OrderBy(o=>o.DisplayOrder))
     {
         if(Model.ServiceList.Where(c=>c.CategoryId == item.Id).Count() > 0)
         {
