--- a/ProjetoTempus/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ProjetoTempus/Areas/Identity/Pages/Account/Register.cshtml
@@ -2,15 +2,13 @@
 @model RegisterModel
 @using ProjetoTempus.Utility
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Registrar novo Usuario";
 }
-
-<h1>Register New Employee</h1>
 
 <div class="row backgroundWhite border" >
     <div class="col-md-12">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Create a new account.</h4>
+            <h4>Registrar Novo Usuario.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group row">
@@ -112,7 +110,7 @@
             
             <div class="form-group row">
                 <div class="col-5 offset-3">
-                    <button type="submit" class="btn btn-primary form-control">Register</button>
+                    <button type="submit" class="btn btn-primary form-control">Registrar</button>
                 </div>
             </div>
             
