--- a/ProjetoTempus/Views/Shared/_Layout.cshtml
+++ b/ProjetoTempus/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
-                <a class="navbar-brand" asp-area="Customer" asp-controller="Home" asp-action="Index">ProjetoTempus</a>
+                <a class="navbar-brand" asp-area="Customer" asp-controller="Home" asp-action="Index">Projeto Tempus</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -36,42 +36,17 @@
                         {
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropDown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Content Management
+                                    Administração
                                 </a>
 
                                 <div class="dropdown-menu" aria-labelledby="navbarDropDown">
-                                    <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
-                                    <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Frequency" asp-action="Index">Frequency</a>
-                                    <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Service" asp-action="Index">Service</a>
-                                    <a class="dropdown-item text-white" asp-area="Admin" asp-controller="WebImages" asp-action="Index">Images</a>
                                     @if (User.IsInRole(SD.Admin))
                                     {
-                                        <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Usuario" asp-action="Index">User</a>
+                                        <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Usuario" asp-action="Index">Usuario</a>
                                     }
 
-                                    <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Order" asp-action="Index">Order</a>
-
+                                    <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Cliente" asp-action="Index">Clientes</a>
                                 </div>
-                            </li>
-                        }
-
-                        @if (HttpContextAccessor.HttpContext.Session.Getobject<List<int>>(SD.SessionCart) != null)
-                        {
-                            <li style="color:white">
-                                <a asp-area="Customer" asp-controller="Cart" asp-action="Index" class="nav-link text-white">
-                                    @{
-                                        var count = HttpContextAccessor.HttpContext.Session.Getobject<List<int>>(SD.SessionCart).Count;
-                                    }
-                                    <i class="fas fa-shopping-cart"> &nbsp; (@count)</i>
-                                </a>
-                            </li>
-                        }
-                        else
-                        {
-                            <li style="color:white">
-                                <a href="#" class="nav-link text-white">
-                                    <i class="fas fa-shopping-cart"> &nbsp; (0)</i>
-                                </a>
                             </li>
                         }
                     </ul>
@@ -89,7 +64,7 @@
 
     <footer class="border-top footer bg-primary text-white">
         <div class="container">
-            &copy; 2020 - ProjetoTempus
+            &copy; 2020 - Projeto Tempus
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
@@ -97,11 +72,9 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.serializeJSON/2.9.0/jquery.serializejson.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
-    @*<script src="https://kit.fontawesome.com/e19c476714.js"></script>*@
     <script src="https://kit.fontawesome.com/60317791f5.js" crossorigin="anonymous"></script>
 
     @RenderSection("Scripts", required: false)
